fixed some styling

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
    crossorigin=""/>
-<<<<<<< HEAD
    <link rel="stylesheet" href="style.css">
-=======
->>>>>>> 8f551fb19b665fa9c2d7efdf295914df96aebd79
+   <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
@@ -23,11 +21,6 @@
 	<title>
 		IP Address Tracker
 	</title>
-<<<<<<< HEAD
-	
-=======
-
->>>>>>> 8f551fb19b665fa9c2d7efdf295914df96aebd79
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	 <!-- <script>
       // Initialize and add the map
@@ -62,21 +55,21 @@
 		<div class="search-results">
 			<div class="row-1">
 				<div class="box">
-					<h2> IP ADDRESS </h2>
+					<h5> IP ADDRESS </h5>
 					<p><span id="ip-here"></span></p>
 				</div>
 				<div class="box">
-					<h2> LOCATION </h2>
+					<h5> LOCATION </h5>
 					<p><span id="city-here"></span>, <span id="reg-here"></span> </br> <span id="postal-here"></span>  </p>
 				</div>
 			</div>
 			<div class="row-1">
 				<div class="box">
-					<h2> TIMEZONE </h2>
+					<h5> TIMEZONE </h5>
 					<p><span id="time-here"></span></p>
 				</div>
 				<div class="box">
-					<h2> ISP </h2>
+					<h5> ISP </h5>
 					<p> <span id="isp-here"></span></p>
 				</div>
 			</div>
